<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mauris.MainActivity">

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/top_bar_height"
        android:background="@android:color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_view_panama"
            android:src="@drawable/ogo_spol" />

        <TextView
            style="@style/TopBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:text="@string/mauris"
            android:textColor="@color/colorMauris" />

        <TextView
            style="@style/TopBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/kingdom" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/tiny_view_height"
        android:background="@color/colorMauris"/>

    <RelativeLayout
        android:id="@+id/relative_layout_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/plaszczka_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:src="@drawable/panama" />

        <TextView
            android:id="@+id/adventure_text"
            style="@style/Banner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/adventure" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/website_text"
            style="@style/ContactInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:autoLink="web"
            android:drawableLeft="@drawable/website_icon2"
            android:text="@string/website" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/phone_text"
            style="@style/ContactInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:autoLink="phone"
            android:drawableLeft="@drawable/phone_icon2"
            android:text="@string/phone" />

    </LinearLayout>

<TextView
    style="@style/BottomBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/invitation"/>

</LinearLayout>

</LinearLayout>
